# RFD_moddeling

./: .gitignore  CMakeLists.txt  Lehtinen1999.cpp  Lehtinen1999_fig1.cpp  Notes from Dwyer.txt  README  TODO.txt  ccgsl additions.txt  coulomb_pot_testing.py  error_dump  lehtinen_1999.cpp  potential_inconsistancies.txt  project ideas.txt  questions for dwyer.txt  questions for dwyer.txt~  simulation.cpp
TMP_PenelopeBremStuff/PENELOPE/: convert_brem_diff_cross.py  convert_photon_angle.py  out_pdbrang.p08
algorithm_tests/: 2D_tst_A  2D_tst_B  CMakeLists.txt  SC_elastic_scatt_tst.cpp  brem_test.cpp  brem_test_old.cpp  cheby_sampler_test.cpp  coulomb_pot_testing.py  lookup_speed_test.cpp  lookup_speed_test_two.cpp  output_tester.cpp  random_seeding_test.cpp  read_scatt_tst.py  test_2D_spline.cpp  test_fast_inverse_sq.cpp  test_walker_alias.cpp  view_2D_spline_test.py
algorithm_tests/python_viewing_scrips/: 2D_tst_B  cache_integrand_test  cheby_test  read_binary.py  view_2D_spline_test.py  view_2D_spline_test_2.py  view_alias_test.py  view_brem_test.py  view_cheby_test.py
bash_scripts/: run_CMake_Release.sh  run_CMake_alg_tsts.sh  run_CMake_debug.sh  run_CMake_make_tables_debug.sh  run_CMake_make_tables_release.sh
ccgsl/: blas.hpp  block.hpp  block_char.hpp  block_complex.hpp  block_complex_float.hpp  block_complex_long_double.hpp  block_float.hpp  block_int.hpp  block_long.hpp  block_long_double.hpp  block_short.hpp  block_uchar.hpp  block_uint.hpp  block_ulong.hpp  block_ushort.hpp  bspline.hpp  cdf.hpp  chebyshev.hpp  combination.hpp  complex.hpp  complex_float.hpp  complex_long_double.hpp  const.hpp  const_cgs.hpp  const_cgsm.hpp  const_mks.hpp  const_mksa.hpp  const_num.hpp  deriv.hpp  dht.hpp  eigen.hpp  eigen_gen.hpp  eigen_genherm.hpp  eigen_gensymm.hpp  eigen_herm.hpp  eigen_nonsymm.hpp  eigen_symm.hpp  exception.hpp  fft.hpp  fft_complex.hpp  (+121 more)
documentation/: doc.tex
make_tables/: CMakeLists.txt  combine_diffusion_tables.cpp  make_brem_tables.cpp  make_diffusion_tables.cpp  make_diffusion_tables_MonteCarlo.cpp  make_diffusion_tables_old.cpp  make_diffusion_tables_transform.cpp  make_ionization_tables.cpp  make_moller_tables.cpp  read_ionization_tables.cpp
physics/: apply_force.hpp  bethe_eq.hpp  brems_pairPr.hpp  bremsstrahlung.cpp  bremsstrahlung.hpp  bremsstrahlung_scattering.hpp  bremsstrahlung_tables.hpp  interaction_chooser.hpp  low_energy_electron_SP.csv  moller_scattering.hpp  particles.hpp  particles_source.hpp  quasi_static_fields.hpp  relativistic_formulas.hpp  shielded_coulomb_diffusion.hpp
physics/old_brem/: brems_pairPr.hpp  bremsstrahlung.cpp  bremsstrahlung_scattering.hpp  bremsstrahlung_tables.hpp
python_visualize/: 2D_tst  NEW_view_diffusion_table.py  TST.py  bremsstrahlung_table  constants.py  moller_tables_output  out  out_arg  output  output.txt  read_binary.py  read_brem_tables.py  test_out72  test_outV72  test_out_int  test_out_val  tst  tst_max  tst_min  utils.py  view_2D_spline_test.py  view_diffusion_table.py  view_ionization_table.py  view_lehtinen_tst.py  view_moller_table.py  view_output.py  view_particle_history_output.py  view_timestep_data.py
python_visualize/projects/: view_lehtinen1999_tst.py
python_visualize/view_tables/: view_diffusion_table.py  view_ionization_table.py  view_moller_table.py
read_tables/: bremsstrahlung_table.hpp  diffusion_table.hpp  ionization_table.hpp  moller_table.hpp
read_tables/old/: moller_table.hpp
tables/: ionization_losses  shielded_coulomb_diffusion
tables/diffusion/: 0.0001  0.01  5e-05  timesteps.txt
tables/diffusion_segments/: diffusion_table_MONTECARLO  diffusion_table_TRANSFORM
tables_old/: bethe_info  ionization_losses_RML  moller
tables_old/diffusion/: 0.0001  0.001
tables_old/diffusion_1/: 0.0005
tables_old/diffusion_2/diffusion_segments/: diffusion_table_MONTECARLO_A  diffusion_table_MONTECARLO_B  diffusion_table_TRANSFORM
utils/: CDF_sampling.hpp  GSL_spline.hpp  GSL_utils.h  GSL_utils.hpp  SC_elastic_scatt.hpp  arrays_IO.hpp  binary_IO.hpp  chebyshev.hpp  constants.hpp  fprecision.hpp  functor.hpp  gen_ex.hpp  integrate.hpp  moller_scattering.hpp  particle_history.hpp  rand.hpp  rejection_sampling.h  root_finding.hpp  solve_polynomial.hpp  span_tree.hpp  spline.hpp  spline_2D.hpp  time_tree.hpp
utils/old_code/: directories.hpp
